--- a/src/app/pages/instructor/view-course/view-course.component.html
+++ b/src/app/pages/instructor/view-course/view-course.component.html
@@ -40,8 +40,8 @@
                                     <h2>{{course?.course_title}}</h2>
                                     <span class="_215b04">{{course?.course_description}} </span>
                                 </div>
-                                <!-- <div class="_215b06">										
-                                    <div class="_215b07">										
+                                <!-- <div class="_215b06">
+                                    <div class="_215b07">
                                         <span><i class='uil uil-comment'></i></span>
                                         {{course.}}
                                     </div>
@@ -117,11 +117,11 @@
 
                                         <div *ngFor="let chapter of chapters" class="tab">
                                             <input type="checkbox" class="tab-input" id="{{chapter.id}}">
-                                            <label class="tab-label" for="{{chapter.id}}">
-                                                <span class="title">
+                                            <label class="tab-label descriptionCard" for="{{chapter.id}}">
+                                                <!-- <span class="title"> -->
                                                     <i class='uil uil-presentation-play crse_icon'></i>
-                                                    <b>{{chapter.chapter_title}}</b>
-                                                </span>
+                                                    <p>{{chapter.chapter_title}}</p>
+                                                <!-- </span> -->
                                                 <span>{{chapter.chapter_num_of_video}} {{'lectures' | translate}}</span>
                                                 <span>{{chapter.chapter_fee}} {{'LE' | translate}}</span>
                                                 <!-- <button *ngIf="!checkChapterOnCart(chapter)" (click)="cart.addToCart(chapter)" class="btn_adcart"><i
