--- a/src/app/pages/user/user-study-course/user-study-course.component.html
+++ b/src/app/pages/user/user-study-course/user-study-course.component.html
@@ -11,6 +11,7 @@
     <i class="uil uil-angle-right collapse_menu--icon "></i>
     <span class="collapse_menu--label"></span>
 </button>
+<p class="moreButton"  (click)="collapse()" >{{"More"|translate}}</p>
 <!-- Left Sidebar Start -->
 <!-- <nav class="vertical_nav chapter-list "> -->
 <nav class="vertical_nav chapter-list vertical_nav__minify">
