--- a/src/app/pages/user/user-view-course/user-view-course.component.html
+++ b/src/app/pages/user/user-view-course/user-view-course.component.html
@@ -118,7 +118,7 @@
 
                                     <div *ngFor="let chapter of chapters" class="tab">
                                         <input type="checkbox" class="tab-input" id="{{chapter.id}}">
-                                        <label class="tab-label" for="{{chapter.id}}">
+                                        <label class="tab-label descriptionCard" for="{{chapter.id}}">
                                             <button *ngIf="!checkChapterOnCart(chapter) && chapter.status === 0"
                                                 (click)="cart.addToCart(chapter)" class="btn_adcart"><i
                                                     class="uil uil-shopping-cart-alt"></i>{{'Add to Cart' | translate}}</button>
@@ -126,10 +126,10 @@
                                                 class="btn_adcart" style="background-color : blue">{{'Pending' | translate}}</button>
                                             <button *ngIf="chapter.status === 2"
                                                 class="btn_adcart" style="background-color :green">{{'Enrolled' | translate}}</button>
-                                            <span class="title">
+                                            <!-- <span class="title"> -->
                                                 <i class='uil uil-presentation-play crse_icon'></i>
-                                                <b>{{chapter.chapter_title}}</b>
-                                            </span>
+                                              <!-- </span> -->
+                                              <p>{{chapter.chapter_title}}</p>
                                             <!-- <span>{{chapter.chapter_num_of_video}} {{'lectures' | translate}}</span> -->
                                             <span>{{chapter.chapter_fee}} {{'LE' | translate}}</span>
 
