--- a/src/app/pages/user/user-study-course/user-study-course.component.html
+++ b/src/app/pages/user/user-study-course/user-study-course.component.html
@@ -7,11 +7,12 @@
     <i class="uil uil-angle-right collapse_menu--icon "></i>
     <span class="collapse_menu--label"></span>
 </label> -->
-<button (click)="collapse()" id="collapse_menu" class="collapse_menu chapterListToggle minify">
-    <i class="uil uil-angle-right collapse_menu--icon "></i>
+<button (click)="collapse()" id="collapse_menu" class="collapse_menu chapterListToggle minify morebuttn">
+    <i class="uil uil-angle-right collapse_menu--icon ">    {{"More"|translate}}</i>
     <span class="collapse_menu--label"></span>
+
 </button>
-<p class="moreButton"  (click)="collapse()" >{{"More"|translate}}</p>
+<!-- <p class="moreButton"  (click)="collapse()" ></p> -->
 <!-- Left Sidebar Start -->
 <!-- <nav class="vertical_nav chapter-list "> -->
 <nav class="vertical_nav chapter-list vertical_nav__minify">
