--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -3,8 +3,9 @@
   <header class="lp-header">
     <nav class="navbar navbar-expand-lg">
       <div class="container">
-        <!-- Navbar brand--><a class="navbar-brand font-weight-bold"><img src="assets/images/logo.jpeg" alt="..."
-            class="img-fluid"></a>
+        <!-- Navbar brand-->
+        <a class="navbar-brand font-weight-bold"><img src="assets/images/main-logo.png" alt="..." class="img-fluid"></a>
+        <!-- <a class="navbar-brand font-weight-bold"><img src="assets/images/logo.jpeg" alt="..." class="img-fluid"></a> -->
         <!-- Navbar toggler button-->
         <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"
@@ -120,7 +121,7 @@
           </div>
           <div class="card-footer">
             <small class="text-muted">{{"Mohamed Ahmed"}}</small>
-        
+
           </div>
         </div>
       </div>
