--- a/src/app/pages/user/components/user-footer/user-footer.component.html
+++ b/src/app/pages/user/components/user-footer/user-footer.component.html
@@ -1,6 +1,6 @@
-<footer class="footer mt-40">
+<footer class="footer mt-40 studentFooter">
     <div class="container-fluid">
-        <div class="row">					
+        <div class="row">
             <div class="col-lg-12">
                 <div class="item_f1">
                     <a >{{"Copyright Policy" | translate}}</a>
@@ -13,7 +13,7 @@
                     <div class="row">
                         <div class="col-md-6">
                             <ul class="fotb_left">
-                                
+
                                 <li>
                                     <p>© 2020 <strong>{{"Smart Academy" | translate}}</strong>. {{"All
                                         Rights Reserved" | translate}}.</p>
