--- a/src/app/pages/user/user-study-course/user-study-course.component.html
+++ b/src/app/pages/user/user-study-course/user-study-course.component.html
@@ -52,11 +52,12 @@
 <!-- Body Start -->
 <div class="wrapper pt-0 course-content wrapper__minify">
     <div class="row">
-        <div class="col-lg-12">
+        <div class="col-lg-12 video">
             <div class="video-player-container">
-                <video [hidden]="showPlayer" width="100%" controls>
+                <video  width="100%" controls >
                     <source src="mov_bbb.mp4" type="video/mp4">
-                    <source src="mov_bbb.ogg" type="video/ogg">
+                     <source src="mov_bbb.ogg" type="video/ogg">
+                    <!-- <source src="mov_bbb.ogg" type="video/ogg"> -->
                     Your browser does not support HTML video.
                 </video>
                 <div class="vimeoContainer" [hidden]="!showPlayer" id="lectureContainer"></div>
@@ -64,7 +65,7 @@
         </div>
         <div class="container-fluid">
 
-            <div class="row">
+            <div class="row description">
                 <div class="col-12 col-lg-11">
                     <div class="grp_titles">
                         <h2 class="">{{chapterName}}</h2>
@@ -76,6 +77,72 @@
                 </div>
 
             </div>
+
+
+<div class="contentList ">
+  <h4 class=header>{{"Course content" | translate}}</h4>
+  <div class="accordion" id="accordionExample">
+    <div class="card">
+      <div class="card-header" id="headingOne">
+        <h2 class="mb-0">
+          <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+Chapter one
+          </button>
+        </h2>
+      </div>
+
+      <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+        <div class="card-body">
+          <ul class="list-group">
+            <li class="list-group-item ">Lec 1  <a href="">22 min</a></li>
+            <li class="list-group-item">Lec 2 <a href="">22 min</a></li>
+            <li class="list-group-item active">Lec 3 <a href="">22 min</a></li>
+            <li class="list-group-item">Lec 4 <a href="">22 min</a></li>
+            <li class="list-group-item">Lec 5 <a href="">22 min</a></li>
+            <li class="list-group-item">Lec 6 <a href="">22 min</a></li>
+            <li class="list-group-item">Lec 7 <a href="">22 min</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-header" id="headingTwo">
+        <h2 class="mb-0">
+          <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+Chapter two
+          </button>
+        </h2>
+      </div>
+      <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+        <div class="card-body">
+          <ul class="list-group">
+            <li class="list-group-item">Lec 1 <a href="">22 min</a></li>
+            <li class="list-group-item">Lec 2 <a href="">22 min</a></li>
+            <li class="list-group-item">Lec 3 <a href="">22 min</a></li>
+            <li class="list-group-item">Lec 4 <a href="">22 min</a></li>
+          </ul>        </div>
+      </div>
+    </div>
+    <div class="card">
+      <div class="card-header" id="headingThree">
+        <h2 class="mb-0">
+          <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+Chapter three
+          </button>
+        </h2>
+      </div>
+      <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+        <div class="card-body">
+          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- <div  class=""></div> -->
+
+
+
         </div>
 
     </div>
